--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -35,13 +35,27 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId = "com.example.todo_app"
+        applicationId = "io.github.robertaguilera712.rtodo"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdk = flutter.minSdkVersion
         targetSdk = flutter.targetSdkVersion
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
+    }
+
+    signingConfigs {
+        release {
+            keyAlias 'todo'
+            keyPassword 'todo2024!'
+            storeFile file('./my-key.jks')
+            storePassword 'todo2024!'
+        }
+    }
+    buildTypes {
+        release {
+            signingConfig signingConfigs.release
+        }
     }
 
     buildTypes {
