--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,15 +46,10 @@ android {
 
     signingConfigs {
         release {
-            keyAlias 'todo'
+            keyAlias 'todoapp'
             keyPassword 'todo2024!'
-            storeFile file('./my-key.jks')
+            storeFile file('../../my-key.jks')
             storePassword 'todo2024!'
-        }
-    }
-    buildTypes {
-        release {
-            signingConfig signingConfigs.release
         }
     }
 
@@ -62,7 +57,7 @@ android {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig = signingConfigs.debug
+            signingConfig signingConfigs.release
         }
     }
 }
